[package]
name = "platformer"
version = "0.1.0"
edition = "2021"
authors = [ "CosmoBrain <cosmobrain@outlook.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
rapier2d = { version = "0.18.0", features = ["serde-serialize"] }
vector = { version = "0.1.0", path = "../vector", features = ["glam"] }
